# benedere

./: .env.example  .gitignore  DEVELOPMENT_GUIDELINES.md  DIVIDA_TECNICA.md  Dockerfile  Makefile  alembic.ini  benedere_backlog_backend.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/endpoints/: cliente.py  faixa_peso_embalagem.py  ingrediente.py  markup.py  movimentacao_estoque.py  nutricionista.py  orcamento.py  pdf.py  pedido.py  producao.py  produto.py  tenant.py
app/api/v1/schemas/: cliente.py  ingrediente.py  movimentacao_estoque.py  orcamento.py  pedido.py  producao.py  produto.py  tenant.py
app/core/: auth0.py  config.py
app/domain/services/: cliente_service.py  custo_ingrediente_service.py  faixa_peso_embalagem_service.py  ingrediente_service.py  markup_service.py  movimentacao_estoque_service.py  nutricionista_service.py  orcamento_service.py  pedido_service.py  producao_service.py  produto_service.py  tenant_service.py
app/infra/database/: models.py
app/infra/database/migrations/: env.py
app/infra/repository/: cliente_repository.py  faixa_peso_embalagem_repository.py  ingrediente_repository.py  markup_repository.py  movimentacao_estoque_repository.py  nutricionista_repository.py  orcamento_repository.py  pedido_repository.py  produto_repository.py  tenant_repository.py
backend/: .gitignore  Makefile  pyproject.toml  sonar-project.properties
backend/.github/workflows/: cd.yml
backend/app/services/: pdf_generator.py
backend/tests/: conftest.py
tests/unit/domain/: test_produto_service.py
(+66 files in other folders)
