[tool.poetry]
name = "benedere"
version = "0.0.1"
description = "Benedere Alimentação Saudável — SaaS de orçamento de marmitas"
authors = ["Benedere <dev@benedere.com.br>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.31.0"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.27.0"
pydantic-settings = "^2.3.0"
pydantic = { extras = ["email"], version = "^2.7.0" }
python-dotenv = "^1.0.0"
reportlab = "^4.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
black = "^24.4.0"
isort = "^5.13.0"
flake8-bugbear = "^24.4.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
